--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,47 @@
+/*
+ * Copyright 2018 softcake.org.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License").
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *    http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
 buildscript {
     repositories {
         mavenCentral()
         maven {
             url "https://plugins.gradle.org/m2/"
         }
+
     }
     dependencies {
         classpath "org.junit.platform:junit-platform-gradle-plugin:1.1.0"
         classpath "gradle.plugin.com.zyxist:chainsaw:0.1.3"
         classpath "com.netflix.nebula:nebula-project-plugin:3.4.1"
-        classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.6.1"
+        classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.6.2"
         classpath "ru.vyarus:gradle-pom-plugin:1.2.0"
         classpath "net.nemerosa:versioning:2.0.0"
         classpath "ru.vyarus:gradle-github-info-plugin:1.1.0"
         classpath "io.spring.gradle:dependency-management-plugin:1.0.4.RELEASE"
         classpath "gradle.plugin.de.gliderpilot.gradle.semantic-release:gradle-semantic-release-plugin:1.4.0"
+        classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.0"
+        classpath "org.jfrog.buildinfo:build-info-extractor-gradle:4.6.2"
+//        classpath "me.champeau.gradle:jmh-gradle-plugin:0.3.1"
+//        classpath "org.jfrog.buildinfo:build-info-extractor-gradle:4.6.0"
+//        classpath "com.github.jengelman.gradle.plugins:shadow:2.0.2"
+//        classpath "de.schauderhaft.degraph:degraph-check:0.1.4"
+//        classpath "org.asciidoctor:asciidoctor-gradle-plugin:1.5.7"
+//        classpath "org.asciidoctor:asciidoctorj-pdf:1.5.0-alpha.16"
+//        classpath "com.gradle:build-scan-plugin:1.11"
+        classpath "org.codehaus.groovy.modules.http-builder:http-builder:0.7.1"
     }
 }
 
@@ -62,19 +89,20 @@ ext {
     sonarQubeModules = publishedModules
     generateManifest = true
     publishArtifacts = true
-    checkCodeQuality = false
-    ignoreFailures = false
+    checkCodeQuality = true
+    ignoreFailures = true
 }
 
 
 apply plugin: "idea"
-apply plugin: "org.sonarqube"
+
 apply plugin: "net.nemerosa.versioning"
 apply plugin: "de.gliderpilot.semantic-release"
 apply from: file("gradle/credentials.gradle")
 apply from: file("gradle/compile.gradle")
-apply from: file("$rootProject.rootDir/gradle/properties.gradle")
-apply from: file("$rootProject.rootDir/gradle/sonarqube.gradle")
+apply from: file("gradle/properties.gradle")
+apply from: file("gradle/idea/idea.gradle")
+apply from: file("gradle/sonarqube.gradle")
 
 allprojects {
     apply plugin: "io.spring.dependency-management"
@@ -89,9 +117,6 @@ allprojects {
         }
     }
 
-
-
-
 }
 
 
@@ -100,8 +125,10 @@ subprojects { subProject ->
     if (subProject in publishedModules) {
         apply plugin: "com.zyxist.chainsaw"
         apply plugin: "org.junit.platform.gradle.plugin"
-        apply from: file("$rootProject.rootDir/gradle/publishing.gradle")
-
+        apply from: file("$rootDir/gradle/publishing.gradle")
+        apply from: "$rootDir/gradle/bintray.gradle"
+        apply from: "$rootDir/gradle/artifactory.gradle"
+        apply from: "$rootDir/gradle/code-quality.gradle"
         // common dependencies
         dependencies {
             // JUnit Jupiter API and TestEngine implementation
@@ -115,47 +142,21 @@ subprojects { subProject ->
             implementation "com.google.guava:guava"
         }
 
-
     }
 
     if (subProject in sonarQubeModules) {
-        apply from: file("$rootProject.rootDir/gradle/coverage.gradle")
+        apply from: file("$rootDir/gradle/coverage.gradle")
 
     }
 
     if (subProject in integTestModules) {
-        apply from: file("$rootProject.rootDir/gradle/integrationTest.gradle")
+        apply from: file("$rootDir/gradle/integrationTest.gradle")
     }
 
     repositories {
         jcenter()
         mavenLocal()
         mavenCentral()
-    }
-    String branch = versioning.info.branch
-
-    final BRANCH_NAMES_PATTERN = /^(?:release[-\/])?[0-9]+(\.[0-9]+)?\.x$|^(?:feature[-\/]|hotfix[-\/]|develop|master)?$/
-
-    afterEvaluate {
-        if (branch.matches(BRANCH_NAMES_PATTERN)){
-
-            if (!project.isSnapshot && project.hasTravisSecEnv) {
-
-//                publish.finalizedBy getTasksByName("bintrayUpload", true)
-//                publish.finalizedBy getTasksByName("artifactoryPublish", true)
-//                publish.finalizedBy rootProject.getTasksByName("gitPublishPush", true)
-                publish.finalizedBy rootProject.getTasksByName("sonarqube", true)
-
-            } else if (!project.isPullRequest && project.hasTravisSecEnv) {
-
-//                publish.finalizedBy getTasksByName("artifactoryPublish", true)
-                publish.finalizedBy rootProject.getTasksByName("sonarqube", true)
-
-            } else if (project.isPullRequest && project.hasTravisSecEnv) {
-
-                build.finalizedBy rootProject.getTasksByName("sonarqube", true)
-            }
-        }
     }
 
 }
@@ -194,12 +195,10 @@ allprojects { subProject ->
 
         junitPlatformTest {
 
-
-                jacoco {
-                    append = false
-                    destinationFile = file("$buildDir/jacoco/test.exec")
-                }
-
+            jacoco {
+                append = false
+                destinationFile = file("$buildDir/jacoco/test.exec")
+            }
 
         }
 
