--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 #
-# Copyright 2017 softcake.org.
+# Copyright 2018 softcake.org.
 #
 # Licensed under the Apache License, Version 2.0 (the "License").
 # you may not use this file except in compliance with the License.
@@ -13,8 +13,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-
-org.gradle.workers.max=3
+org.gradle.parallel=true
 defaultBuiltBy = SoftCake Team
 domain = softcake.org
 reverseDomain = org.softcake
