--- a/gradle/properties.gradle
+++ b/gradle/properties.gradle
@@ -1,6 +1,6 @@
 
 /*
- * Copyright 2017 softcake.org.
+ * Copyright 2018 softcake.org.
  *
  * Licensed under the Apache License, Version 2.0 (the "License").
  * you may not use this file except in compliance with the License.
@@ -22,11 +22,12 @@ import java.text.SimpleDateFormat
 status = version.toString().endsWith("-SNAPSHOT") ? 'snapshot' : 'release'
 println(status)
 Date buildTimeAndDate = new Date()
+final BRANCH_NAMES_PATTERN = /^(?:release[-\/])?[0-9]+(\.[0-9]+)?\.x$|^(?:feature[-\/]|hotfix[-\/]|develop|master)?$/
 
 ext {
     isSnapshot = version.toString().endsWith("-SNAPSHOT")
     isTravis = System.getenv("TRAVIS") != null
-    isCi = true // TODO isTravis
+    isCi = false // TODO isTravis
     isPullRequest = isTravis ? System.getenv('TRAVIS_PULL_REQUEST') != "false" : false
     hasTravisSecEnv = System.getenv('TRAVIS_SECURE_ENV_VARS') == "true"
     jvm = Jvm.current()
@@ -38,7 +39,7 @@ ext {
     //TODO
     buildRevision = versioning.info.commit
     builtByValue = project.hasProperty("builtBy") ? project.builtBy : project.defaultBuiltBy
-
+    isValidBranch = versioning.info.branch.matches(BRANCH_NAMES_PATTERN)
 }
 
 ext.normalizeVersion = { versionLiteral ->
