--- a/gradle/publishing.gradle
+++ b/gradle/publishing.gradle
@@ -1,5 +1,5 @@
 /*
- * Copyright 2017 softcake.org.
+ * Copyright 2018 softcake.org.
  *
  * Licensed under the Apache License, Version 2.0 (the "License").
  * you may not use this file except in compliance with the License.
@@ -23,10 +23,10 @@ apply plugin: 'ru.vyarus.pom'
 
 publishing {
     publications {
-        mavenJava(MavenPublication) {
+        nebula(MavenPublication) {
             from components.java
-            artifact project.tasks.javadocJar
-            artifact project.tasks.sourceJar
+//            artifact project.tasks.javadocJar
+//            artifact project.tasks.sourceJar
         }
     }
 }
