fix(Travis). PR error

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,11 +16,13 @@ branches:
   except:
   - "/^v\\d+\\.\\d+\\.\\d+$/"
 before_install:
+- export BRANCH=$(if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then echo $TRAVIS_BRANCH; else echo $TRAVIS_PULL_REQUEST_BRANCH; fi)
+- echo "TRAVIS_BRANCH=$TRAVIS_BRANCH, PR=$PR, BRANCH=$BRANCH"
 - git fetch --unshallow || true
 - git config user.email "rene.neubert@softcake.org"
 - git config user.name "Travis-CI"
 - git config url.https://.insteadOf git://
-- git checkout -qf $TRAVIS_BRANCH
+- git checkout -qf $BRANCH
 install:
 - echo "skip default gradlew assemble"
 script: "buildscripts/buildViaTravis.sh"
