--- a/.gitattributes
+++ b/.gitattributes
@@ -5,6 +5,7 @@
 # Force the following filetypes to have unix eols, so Windows does not break them
 *.* text eol=lf
 gradlew text eol=lf
+*.sh text eol=lf
 
 # Windows forced line-endings
 /.idea/* text eol=crlf
