build(sonar): add sonar to build file

--- a/gradle.properties
+++ b/gradle.properties
@@ -13,8 +13,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-
-org.gradle.workers.max=3
+org.gradle.parallel=true
+org.gradle.workers.max=8
 defaultBuiltBy = SoftCake Team
 domain = softcake.org
 reverseDomain = org.softcake
