--- a/cucumber.actors/build.gradle
+++ b/cucumber.actors/build.gradle
@@ -23,9 +23,10 @@ plugins {
 
 // tag::moduleName[]
 javaModule.name = 'org.softcake.cucumber.actors'  // <1>
+ext.mod =javaModule.name
 // end::moduleName[]
 
 dependencies {
     // JUnit Jupiter API and TestEngine implementation
-    jmh ("com.google.guava:guava")
+   // jmh ("com.google.guava:guava")
 }
